@@ -1,5 +1,10 @@
 2009-05-05  Richard Guenther  <rguenther@suse.de>
 
+	PR tree-optimization/40022
+	* gcc.c-torture/execute/pr40022.c: New testcase.
+
+2009-05-05  Richard Guenther  <rguenther@suse.de>
+
 	PR middle-end/40023
 	* gcc.c-torture/compile/pr40023.c: New testcase.
 
